--- a/src/pages/projects/projects_details/project_details.scss
+++ b/src/pages/projects/projects_details/project_details.scss
@@ -1,6 +1,7 @@
 .projectDetails {
     display: flex;
     flex-wrap: nowrap;
+    overflow-x: auto;
     gap: 10px;
     height: 40rem;
   .desc{
